fix: Add meta tags for character set, viewport, and color scheme in injectMeta.js refactor: Update font size in style.scss for improved readability

--- a/src/style.scss
+++ b/src/style.scss
@@ -2,7 +2,7 @@
 @use "sass:color";
 
 html {
-  font-size: 16px;
+  font-size: 19px;
 
   @media (max-width: 900px) {
     font-size: 14px;
